# Spotify_Music_Matcher

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: db.py  main.py
app/models/: music.py  user.py
app/routes/: connections.py  health.py  ingest.py  matches.py  me.py  messages.py  oauth.py  settings.py
app/services/: scoring.py  spotify.py
tests/: conftest.py  test_auth_flow.py  test_connections_messages.py  test_explain.py  test_matches.py  test_matches_filters.py  test_scoring.py  test_settings.py
