[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-match-poc"
version = "0.1.0"
description = "FastAPI backend for matching users by Spotify taste"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlmodel>=0.0.16",
  "SQLAlchemy>=2.0.0",
  "httpx>=0.27.0",
  "authlib>=1.3.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

